# tunneldeck

./: .gitattributes  .npmrc  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: routes.rs  server.rs
src-tauri/src/config/: import_export.rs
src-tauri/src/connection/: health.rs  manager.rs  mod.rs  types.rs
src-tauri/src/logging/: audit.rs
src-tauri/src/ssh/: auth.rs  client.rs  mod.rs  terminal.rs  tunnel.rs
src-tauri/src/store/: audit_logger.rs  credential.rs  json_store.rs  known_hosts.rs  mod.rs
src-tauri/src/tunnel/: health.rs  manager.rs  types.rs
src-tauri/tests/: p0_tests.rs
src/components/connection/: ConnectDialog.tsx  ConnectionCard.tsx  ConnectionForm.tsx  DuoPushDialog.tsx
src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx  ToastContainer.tsx  WelcomeView.tsx
src/components/logs/: LogViewer.tsx
src/components/settings/: Settings.tsx
src/components/tags/: TagManager.tsx
src/components/terminal/: TerminalPanel.tsx  TerminalView.tsx
src/components/tunnel/: ConnectDialog.tsx  DuoPushDialog.tsx  TunnelCard.tsx  TunnelForm.tsx  TunnelList.tsx
src/lib/: tauri.ts
src/stores/: connectionStore.ts  terminalStore.ts  toastStore.ts  tunnelStore.ts
src/styles/: globals.css
src/types/: index.ts
test/: mock_http_target.py  mock_ssh_server.py  test_e2e.py
