[package]
name = "tunneldeck"
version = "0.1.0"
edition = "2021"
description = "Enterprise SSH tunnel manager"

[lib]
name = "tunneldeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.48"
russh-keys = "0.48"
ssh-key = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Security_Credentials",
  "Win32_Foundation",
] }
